# hl-metrics

./: .gitignore  DOWNLOAD_PIPELINE_REVIEW.md  README.md  STRUCTURE.md  devenv.nix  flake.nix  pyproject.toml
data/: .gitkeep
docs/: PERFORMANCE_OPTIMIZATION.md  VOLUME_CALCULATION_NOTES.md
notebooks/: hl_research.py  hl_research_altair.py  hl_research_optimized.py  hl_user_study.py
scripts/: check_data_availability.py  download_data.py  estimate_download_cost.py  normalize_data.py  run_pipeline.py  validate_data.py
src/: query_data.py  s3_utils.py  schema.py
tests/: test_pipeline.py
